--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-	"name": "JazzJam",
-	"description": "The easiest way to record MIDI.",
-	"homepage": "https://midi-recorder.web.app",
-	"author": "Philip Pincencia <philip.m.pincencia@gmail.com>",
-	"scripts": {
-		"start": "run-p live-server coffee",
-		"live-server": "live-server public/",
-		"coffee": "coffee --watch --compile --output public/compiled/ public/",
-		"deploy": "firebase deploy"
-	},
-	"dependencies": {
-		"coffeescript": "^2.7.0",
-		"live-server": "^1.2.2",
-		"npm-run-all": "^4.1.5"
-	}
+  "name": "JazzJam",
+  "description": "The easiest way to record MIDI.",
+  "homepage": "https://midi-recorder.web.app",
+  "author": "Philip Pincencia <philip.m.pincencia@gmail.com>",
+  "type": "module",
+  "scripts": {
+    "start": "run-p server coffee",
+    "coffee": "coffee --watch --compile --output public/compiled/ public/",
+    "deploy": "firebase deploy",
+    "server": "nodemon src/bin/www.js"
+  },
+  "dependencies": {
+    "coffeescript": "^2.7.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "npm-run-all": "^4.1.5",
+    "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
 }
