--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "npm-run-all": "^4.1.5",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "smpl": "^0.2.0-alpha7",
+    "soundfont-player": "^0.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
