--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "npm-run-all": "^4.1.5",
     "pg": "^8.11.3",
     "smpl": "^0.2.0-alpha7",
-    "soundfont-player": "^0.12.0"
+    "soundfont-player": "^0.12.0",
+    "tone": "^14.7.77"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
